# backend

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  corona_connect.py  db.py  package-lock.json  package.json  pyproject.toml  serverless.yml
migrations/00_create_helpers/: down.sql  up.sql
migrations/01_zip_location_name_for_helpers/: down.sql  up.sql
migrations/02_is_active_for_helpers/: down.sql  up.sql
migrations/03_phone_is_primary_key_for_helpers/: up.sql
migrations/04_verify/: down.sql  up.sql
migrations/05_code/: down.sql  up.sql
migrations/06_last_called_for_helpers/: down.sql  up.sql
schema/: create_user.json  update_user.json
src/: db.rs  main.rs
tests/: test_register.py
