[tool.poetry]
name = "corona_connect"
version = "0.1.0"
description = ""
authors = ["Jonas Bulik <jonas@bulik.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sentry_sdk = "^0.14.3"
pony = "^0.7.13"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.1"
pytest = "^5.4.1"
flake8 = "^3.7.9"
pre-commit = "^2.2.0"

[tool.taskipy.tasks]
test = "pytest tests/"
lint = "pre-commit run --all-files"
setup = "pre-commit install"

[tool.isort]
known_first_party = ["db", "corona_connect"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
