[tool.poetry]
name = "corona_connect"
version = "0.1.0"
description = ""
authors = ["Jonas Bulik <jonas@bulik.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sentry_sdk = "^0.14.3"
pony = "^0.7.13"
requests = "^2.23.0"
glom = "^19.10.0"
phonenumbers = "^8.12.0"
twilio = "^6.37.0"
pyjwt = "^1.7.1"
yarl = "^1.4.2"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.1"
pytest = "^5.4.1"
flake8 = "^3.7.9"
pre-commit = "^2.2.0"

[tool.taskipy.tasks]
test = "pytest tests/"
lint = "pre-commit run --all-files"
setup = "poetry install && pre-commit install -t pre-commit -t prepare-commit-msg"

[tool.isort]
known_first_party = ["db", "corona_connect"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
